--- a/.eslintrc
+++ b/.eslintrc
@@ -1,37 +1,35 @@
 {
   "root": true,
   "env": {
-    "jest": true
+    "node": true,
+    "jest": true,
+    "es2021": true
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": [
-      "./tsconfig.json"
-    ]
+    "project": "./tsconfig.json",
+    "sourceType": "module"
   },
-  "extends": "airbnb-typescript/base",
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
   "plugins": [
-    "import",
     "@typescript-eslint"
   ],
   "rules": {
-    "comma-dangle": 0,
-    "no-underscore-dangle": 0,
-    "no-param-reassign": 0,
-    "no-return-assign": 0,
-    "camelcase": 0,
-    "import/extensions": 0,
-    "@typescript-eslint/no-redeclare": 0
+    "quotes": ["error", "double"],
+    "indent": ["error", 4],
+    "comma-dangle": ["error", "never"],
+    "semi": ["error", "always"],
+    "@typescript-eslint/no-unused-vars": "warn"
   },
-  "settings": {
-    "import/parsers": {
-      "@typescript-eslint/parser": [
-        ".ts",
-        ".tsx"
-      ]
-    },
-    "import/resolver": {
-      "typescript": {}
+  "overrides": [
+    {
+      "files": ["*.ts", "*.tsx"],
+      "rules": {
+        "@typescript-eslint/no-explicit-any": "off"
+      }
     }
-  }
+  ]
 }
